<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.constraint.Guideline
        android:id="@+id/glVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtPhoneLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_xx_large"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/cbIncognito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glVertical">
        
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPhone"
            style="@style/SignIn.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    
    </android.support.design.widget.TextInputLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtCountryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_x_small"
        android:layout_marginStart="@dimen/general_xx_large"
        android:hint="@string/country"
        app:layout_constraintBottom_toBottomOf="@+id/edtPhoneLayout"
        app:layout_constraintEnd_toStartOf="@+id/edtPhoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtPhoneLayout">
        
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtCountry"
            style="@style/SignIn.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"/>
    
    </android.support.design.widget.TextInputLayout>
    
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cbIncognito"
        style="@style/Base.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incognito_authorization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtPhoneLayout"
        app:layout_constraintStart_toStartOf="@+id/edtCountryLayout"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>