<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_mid">
    
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/general_xxx_large"
        android:background="@color/gray_light_alpha"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@drawable/svg_camera"/>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_mid_large"
        android:hint="@string/name_of_new_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar">
        
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    
    </android.support.design.widget.TextInputLayout>
    
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/swPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_mid"
        android:text="@string/public_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitle"/>
    
    <TextView
        android:id="@+id/tvUsersTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_x_small"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/new_chat_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swPublic"/>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsersTitle"/>

</android.support.constraint.ConstraintLayout>